Kubernetes/Traefik+Cert-Manager/traefik/dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  # Revert to using the annotation for the ingress class
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kube-traefik.local.simonlab.xyz`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik
  tls:
    # Reference the secret, which will now be in the same namespace (traefik)
    secretName: local-simonlab-xyz-tls
